Allow multiple driver per activity